responsiveness and descriptions

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -56,3 +56,9 @@ footer {
         font-size: 35px;
     }
 }
+#mobile-menu{
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    transform: translate(5%, 20%);
+}
