More card problems

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -66,8 +66,8 @@ footer {
 /*card section*/
 .cards_wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 .cards{
     padding: 25px;
