--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -59,7 +59,6 @@ footer {
     margin-left: -20px; 
     margin-bottom: -20px;
     margin-right: -20px;
-    position: fixed;
 }
 #home{
     h2{
@@ -81,8 +80,8 @@ footer {
 .cards{
     padding: 25px;
     margin: 10px;
-    height: 375px;
-    width: 300px;
+    height: 400px;
+    width: 350px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -98,9 +97,53 @@ footer {
     text-align: center;
 }
 .cards:hover {
-    transform: scale(1.02);
+    transform: scale(1.07);
+    transition: ease-in-out 0.2s;
 }
 .img{
-    width: 215px;
+    width: 225px;
     height: 117px;
+}
+.imgs{
+    width: 700px;
+    height: 350px;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #8794a0;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {
+    background-color: var(--clr-blue);
+}
+.dropdown:hover .dropdown-content {
+display: block;
+}
+.dropdown:hover .dropbtn {
+    background-color: var(--clr-blue);
+}
+.transport1{
+    width: 500px;
 }
