--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -260,3 +260,8 @@ display: block;
     cursor: pointer;
     background: #fff;
 }
+.gmaps{
+ border-width: 5px;
+ border-color: #8794a0;
+ border-style: solid;
+}
