--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -245,7 +245,8 @@ display: block;
 }
 
 /*responsive*/
-#mobile-menu{
+@media screen and (max-width:750px){
+ #mobile-menu{
     position: absolute;
     top: 20%;
     right: 5%;
@@ -265,3 +266,56 @@ display: block;
  border-color: #8794a0;
  border-style: solid;
 }
+.cards{
+    padding: 25px;
+    margin: 10px;
+    height: 76%;
+    width: 50%;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-bottom: solid 8px #8794a0;
+    border-left: solid 8px #8794a0;
+    transition: 0.2s ease-in-out;
+    background-color: #8794a0;
+}
+.cards p {
+    font-size: 15px;
+    margin-top: 20px;
+    text-align: center;
+}
+.cards:hover {
+    transform: scale(1.07);
+    transition: ease-in-out 0.2s;
+}
+.img{
+    width: 90%;
+    height: 90%;
+}
+.cards_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr  ;
+    grid-template-rows: 1fr;
+}
+.card{
+    padding: 15px;
+    border-radius: 5px;
+    border-right: solid 8px var(--clr-borders);
+    background-color: var(--clr-DarkishBlue);
+    transition: 0.2s ease-in-out;
+    margin-bottom: 25px;
+    width: 50%;
+    height: 50%;
+}
+
+.card img{
+    border-radius: 5px;
+}
+
+.card:hover{
+    transform: scale(1.02);
+}
+}
+
+
